tweaked some padding margins styling issues on mobile

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -12,7 +12,7 @@ width: 100vw;
 
 .main {
   max-width: 1150px;
-  margin: auto;
+  margin: 40px;
 }
 
 .headerContainer {
@@ -95,7 +95,7 @@ width: 100vw;
 
 .blurbText {
   font-family: Surveyor SSM A;
-  font-size: 24px;
+  font-size: 22px;
   letter-spacing: -.37px;
   line-height: 36px;
   padding-right: 20px;
@@ -187,6 +187,10 @@ width: 100vw;
   .blurbText  {
     padding-bottom: 20px;
   }
+
+  .headerContainer {
+    margin: 0 40px;
+  }
 }
 
 @media only screen and (max-width: 712px) {
@@ -198,6 +202,20 @@ width: 100vw;
     padding-left: 30px;
     padding-right: 30px;
   }
+
+  .headerH2Top  {
+    font-size: 22px;
+  }
+
+  .blurbText {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 620px) {
+  .main {
+    margin: 6px !important;
+  }
 }
 
 @media only screen and (max-width: 560px) {
@@ -208,10 +226,24 @@ width: 100vw;
   .rtBtm {
     display: block;
   }
+
+  .headerContainer {
+    padding: 40px 40px;
+  }
 }
 
 @media only screen and (max-width: 450px) {
   .clientStyleDeets {
     display: inline;
+  }
+
+  .stylesDiv {
+    padding: 0;
+  }
+
+  .headerContainer {
+    margin: 0;
+    padding: 40px 20px;
+
   }
 }
